fix alignment on mobile

--- a/src/components/CollectionFilters/collectionFilters.scss
+++ b/src/components/CollectionFilters/collectionFilters.scss
@@ -186,6 +186,10 @@
   // margin bottom for if they wrap
   margin: 0 12px 12px 0;
 
+  .icon {
+    align-self: center;
+  }
+
   .filter-tag-text {
     font-size: 16px;
     margin-right: 10px;
